# esp-os

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig
docs/: documentation.md
main/: CMakeLists.txt  app_includes.h  app_task.c  app_task.h  ble_manager.c  ble_manager.h  command_handler.c  command_handler.h  esp-os.c  hello.c  minmea.c  minmea.h  nvs_storage.c  nvs_storage.h  utils.c  utils.h  wifi_manager.c  wifi_manager.h
